--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Hola, estamos aprendiendo git</h1>
 	<h2>Mi segundo commit</h2>
 		<h3>Mi tercer commit</h3>
+			<p>Parrafo 1</p>
 </body>
 
 </html>
